src/test/deca/syntax/invalid/test_synt17.deca
//Resultat:
//      Erreur syntaxique : { de plus ligne 6
class A { 
int set(){
}
float set(){
}}
}
